<resources>
    <string name="app_name">InternProjectKotlin</string>

    <!--  일반 문구  -->
    <string name="search">검색</string>
    <string name="favorites">즐겨찾기</string>
    <string name="noLimit">검색 횟수가 부족합니다.</string>

    <!--  SearchUserFragment  -->
    <string name="suf_search_guide">여기에 입력하세요.</string>
    <string name="suf_input_keyword">검색할 아이디를 입력해주세요</string>
    <string name="suf_nothing_result">검색된 유저가 없습니다.</string>

    <!--  FavoritesFragment  -->
    <string name="noFavorites">즐겨찾기가 없습니다.</string>

    <!--  UserDetailActivity -->
    <string name="detail">상세정보</string>
    <string name="noData">결과 없음</string>
    <string name="noName">이름 없음</string>
    <string name="followers">Followers\u00a0</string>
    <string name="following">Following\u00a0</string>
    <string name="followersListTitle">Followers</string>
    <string name="hyphen">-</string>
    <string name="noFollowers">팔로워가 없습니다.</string>

    <!--  : 출력용  -->
    <string name="name">이름 :\u00a0</string>
    <string name="company">소속 :\u00a0</string>
    <string name="email">이메일 :\u00a0</string>

</resources>